--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,6 +42,10 @@
     margin: 0;
     transition: all 1s;
 }
+.acordeon input:hover ~ .acordeon__contenido{
+    height: auto;
+    margin: 15px 0;
+}
 .acordeon input:checked ~ .acordeon__contenido{
     height: auto;
     margin: 15px 0;
